# softk

./: README.rst
src/: CMakeLists.txt  dwarfwalk.cpp  main.cpp  skutils.cpp  skutils.h  softkernel.cpp  testfuncs.cpp
